Add KafkaTestUtils methods using Duration for timeout (#2467)
* Add KafkaTestUtils methods using Duration for timeout

To adjust codebase to modern JVM (and Kafka API itself - e.g. poll(Duration)).
Old methods with "long timeout" are deprecated.

* Remove deprecated KafkaTestUtils methods using "long timeout"

Replaced by method with Duration for timeout.